--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("http://fonts.googleapis.com/css?family=Lato:300,400,900");
+@import url("https://fonts.googleapis.com/css?family=Lato:300,400,900");
 
 /*
 	Twenty 1.0 by HTML5 UP
@@ -27,7 +27,7 @@
 	}
 
 	body, input, select, textarea {
-		color: #7c8081;
+		color: #313;
 		font-family: 'Lato', sans-serif;
 		font-size: 15pt;
 		font-weight: 300;
@@ -64,6 +64,12 @@
 		line-height: 1.75em;
 		margin-bottom: 1em;
 		text-transform: uppercase;
+	}
+	header h1, header h2, header h3, header h4, header h5, header h6 {
+		margin-bottom: 0;
+	}
+	header {
+		margin-bottom: 1em;
 	}
 
 		h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -120,6 +126,14 @@
 		position: relative;
 		text-align: center;
 	}
+		header small {
+			color: #666;
+			font-size: 12pt;
+		}
+
+		header small time {
+			font-style: italic;
+		}
 
 		header.special:before, header.special:after {
 			border-bottom: solid 1.5px;
@@ -140,12 +154,16 @@
 			right: 0;
 		}
 
+		article header.special h2 {
+			font-weight: 800;
+		}
+
 		header.special h2 {
 			margin-bottom: 0;
 		}
 
 		header.special h2 + p {
-			margin-bottom: 0;
+			/*margin-bottom: 0;*/
 			padding-top: 1.5em;
 		}
 
@@ -158,7 +176,24 @@
 			top: 1em;
 			width: 100%;
 		}
+		header.special .icon {
+			cursor: default;
+			height: 7em;
+			left: 0;
+			position: absolute;
+			text-align: center;
+			top: 1em;
+			width: 100%;
+		}
 
+		header.special .profile {
+			background-image: url("/theme/images/profile.png");
+			background-repeat: no-repeat;
+			background-position-x: center;
+			background-size: 96px;
+			background-position-y: 0;
+			top: -10px;
+		}
 			header.special .icon:before {
 				font-size: 3.5em;
 				opacity: 0.35;
@@ -374,21 +409,21 @@
 
 /* Lists */
 
-	ol.default {
+	ol /* .default */ {
 		list-style: decimal;
 		padding-left: 1.25em;
 	}
 
-		ol.default li {
+		ol li {
 			padding-left: 0.25em;
 		}
 
-	ul.default {
+	ul /* .default */ {  
 		list-style: disc;
 		padding-left: 1em;
 	}
 
-		ul.default li {
+		ul li {
 			padding-left: 0.5em;
 		}
 
@@ -1053,11 +1088,13 @@
 
 /* Syntax Highlighting */
 	.highlight {
-		font-family: 'Anonymous Pro';
-	  font-style: normal;
-	  font-weight: 400;
-		background: #272822;
-		color: #f8f8f2;
-		padding: 20px;
-		/*border-radius: 15px;*/
+		font-family: monospace;
+		font-size: 12pt;
+		background: #eee;
+		color: #666;
+		margin-left: -2.5em;
+		padding-left: 3.5em;
+		margin-right: -2.5em;
+		padding-right: 3.5em;
+		margin-bottom: 2em;
 	}
